# list_parser

./: .dockerignore  .gitignore  01create_database.sh  02run_docker_container.sh  Dockerfile  LICENSE  Makefile  README.md  database.py  list_am_parser.py  logger_config.py  main.py  normalization_validation.py  pyproject.toml  schema.sql  test.py
telegram_bot/: callback_handler.py  command_handler.py  keyboard_markups.py  message_handler.py
test/: database_dump.sql  test.py
